--- a/3shop.html
+++ b/3shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Magazin &mdash; LEALCONSTRUCT</title>   
 
                 <!-- Favicons -->
