--- a/contact1.html
+++ b/contact1.html
@@ -97,7 +97,7 @@
                     <div class="container relative">
                         
                         <h2 class="section-title font-alt mb-70 mb-sm-40">
-                            Aveni intrebari?
+                            Contact
                         </h2>
                         
                         <div class="row mb-60 mb-xs-40">
