--- a/shop-single2.html
+++ b/shop-single2.html
@@ -129,7 +129,7 @@
                                 <hr class="mt-0 mb-30"/>
                                 
                                 <div class="row">
-                                    <div class="col-6 lead mt-0 mb-20">
+                                    <div class="col-sm-12 lead mt-0 mb-20">
                                         
                                         <del class="section-text">$50.00</del>
                                         <strong>$25.99</strong>
